--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -224,7 +224,8 @@ roles=SELECT distinct ?relationship ?relationshipCode ?relatedConceptLabel ?rela
       ?y rdfs:label ?relatedConceptLabel . \
       ?p :NHC0 ?relationshipCode . \
       ?p rdfs:label ?relationship . \
-      ?x (rdfs:subClassOf|(rdfs:subClassOf/owl:unionOf/owl:intersectionOf/rdf:rest*/rdf:first)|(owl:equivalentClass/owl:intersectionOf/rdf:rest*/rdf:first))* ?rs .  \
+      ?x (rdfs:subClassOf|owl:equivalentClass) ?z . \
+      ?z (<>|!<>)* ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?p . \
       ?rs owl:someValuesFrom ?y . \
@@ -232,6 +233,7 @@ roles=SELECT distinct ?relationship ?relationshipCode ?relatedConceptLabel ?rela
 }
 
 # constructInverseRolesQuery(String conceptCode, String namedGraph)
+# ?x (rdfs:subClassOf|(rdfs:subClassOf/owl:unionOf/owl:intersectionOf/rdf:rest*/rdf:first)|(owl:equivalentClass/owl:intersectionOf/rdf:rest*/rdf:first))* ?rs .  \
 inverse.roles=SELECT distinct ?relatedConceptLabel ?relatedConceptCode ?relationship ?relationshipCode \
 { \
     GRAPH <#{namedGraph}> \
@@ -242,7 +244,8 @@ inverse.roles=SELECT distinct ?relatedConceptLabel ?relatedConceptCode ?relation
       ?y rdfs:label ?y_label . \
       ?p :NHC0 ?relationshipCode . \
       ?p rdfs:label ?relationship . \
-      ?x (rdfs:subClassOf|(rdfs:subClassOf/owl:unionOf/owl:intersectionOf/rdf:rest*/rdf:first)|(owl:equivalentClass/owl:intersectionOf/rdf:rest*/rdf:first))* ?rs .  \
+      ?x (rdfs:subClassOf|owl:equivalentClass) ?z . \
+      ?z (<>|!<>)* ?rs .  \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?p . \
       ?rs owl:someValuesFrom ?y . \
@@ -593,7 +596,8 @@ roles.batch=SELECT distinct ?conceptCode ?relationship ?relationshipCode ?relate
       ?y rdfs:label ?relatedConceptLabel . \
       ?p :NHC0 ?relationshipCode . \
       ?p rdfs:label ?relationship . \
-      ?x (rdfs:subClassOf|(rdfs:subClassOf/owl:unionOf/owl:intersectionOf/rdf:rest*/rdf:first)|(owl:equivalentClass/owl:intersectionOf/rdf:rest*/rdf:first))* ?rs .  \
+      ?x (rdfs:subClassOf|owl:equivalentClass) ?z . \
+      ?z (<>|!<>)* ?rs .  \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?p . \
       ?rs owl:someValuesFrom ?y . \
@@ -611,7 +615,8 @@ inverse.roles.batch=SELECT distinct ?conceptCode ?relationship ?relationshipCode
       ?y rdfs:label ?y_label . \
       ?p :NHC0 ?relationshipCode . \
       ?p rdfs:label ?relationship . \
-      ?x (rdfs:subClassOf|(rdfs:subClassOf/owl:unionOf/owl:intersectionOf/rdf:rest*/rdf:first)|(owl:equivalentClass/owl:intersectionOf/rdf:rest*/rdf:first))* ?rs .  \
+      ?x (rdfs:subClassOf|owl:equivalentClass) ?z . \
+      ?z (<>|!<>)* ?rs .  \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?p . \
       ?rs owl:someValuesFrom ?y . \
