Include owl:intersectionOf

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -224,8 +224,7 @@ roles=SELECT distinct ?relationship ?relationshipCode ?relatedConceptLabel ?rela
       ?y rdfs:label ?relatedConceptLabel . \
       ?p :NHC0 ?relationshipCode . \
       ?p rdfs:label ?relationship . \
-      ?x (rdfs:subClassOf|owl:equivalentClass) ?z . \
-      ?z (<>|!<>)* ?rs . \
+      ?x (rdfs:subClassOf|owl:equivalentClass|owl:Class|owl:unionOf|owl:intersectionOf)* ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?p . \
       ?rs owl:someValuesFrom ?y . \
@@ -244,8 +243,7 @@ inverse.roles=SELECT distinct ?relatedConceptLabel ?relatedConceptCode ?relation
       ?y rdfs:label ?y_label . \
       ?p :NHC0 ?relationshipCode . \
       ?p rdfs:label ?relationship . \
-      ?x (rdfs:subClassOf|owl:equivalentClass) ?z . \
-      ?z (<>|!<>)* ?rs .  \
+      ?x (rdfs:subClassOf|owl:equivalentClass|owl:Class|owl:unionOf|owl:intersectionOf)* ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?p . \
       ?rs owl:someValuesFrom ?y . \
@@ -596,8 +594,7 @@ roles.batch=SELECT distinct ?conceptCode ?relationship ?relationshipCode ?relate
       ?y rdfs:label ?relatedConceptLabel . \
       ?p :NHC0 ?relationshipCode . \
       ?p rdfs:label ?relationship . \
-      ?x (rdfs:subClassOf|owl:equivalentClass) ?z . \
-      ?z (<>|!<>)* ?rs .  \
+      ?x (rdfs:subClassOf|owl:equivalentClass|owl:Class|owl:unionOf|owl:intersectionOf)* ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?p . \
       ?rs owl:someValuesFrom ?y . \
@@ -615,8 +612,7 @@ inverse.roles.batch=SELECT distinct ?conceptCode ?relationship ?relationshipCode
       ?y rdfs:label ?y_label . \
       ?p :NHC0 ?relationshipCode . \
       ?p rdfs:label ?relationship . \
-      ?x (rdfs:subClassOf|owl:equivalentClass) ?z . \
-      ?z (<>|!<>)* ?rs .  \
+      ?x (rdfs:subClassOf|owl:equivalentClass|owl:Class|owl:unionOf|owl:intersectionOf)* ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?p . \
       ?rs owl:someValuesFrom ?y . \
