Generalization of sparql query to include unionOf

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -224,7 +224,7 @@ roles=SELECT distinct ?relationship ?relationshipCode ?relatedConceptLabel ?rela
       ?y rdfs:label ?relatedConceptLabel . \
       ?p :NHC0 ?relationshipCode . \
       ?p rdfs:label ?relationship . \
-      ?x (rdfs:subClassOf|owl:equivalentClass|owl:Class|owl:unionOf|owl:intersectionOf)* ?rs . \
+      ?x (rdfs:subClassOf|owl:equivalentClass|owl:unionOf/rdf:rest*/rdf:first|owl:intersectionOf/rdf:rest*/rdf:first)* ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?p . \
       ?rs owl:someValuesFrom ?y . \
@@ -243,7 +243,7 @@ inverse.roles=SELECT distinct ?relatedConceptLabel ?relatedConceptCode ?relation
       ?y rdfs:label ?y_label . \
       ?p :NHC0 ?relationshipCode . \
       ?p rdfs:label ?relationship . \
-      ?x (rdfs:subClassOf|owl:equivalentClass|owl:Class|owl:unionOf|owl:intersectionOf)* ?rs . \
+      ?x (rdfs:subClassOf|owl:equivalentClass|owl:unionOf/rdf:rest*/rdf:first|owl:intersectionOf/rdf:rest*/rdf:first)* ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?p . \
       ?rs owl:someValuesFrom ?y . \
@@ -594,7 +594,7 @@ roles.batch=SELECT distinct ?conceptCode ?relationship ?relationshipCode ?relate
       ?y rdfs:label ?relatedConceptLabel . \
       ?p :NHC0 ?relationshipCode . \
       ?p rdfs:label ?relationship . \
-      ?x (rdfs:subClassOf|owl:equivalentClass|owl:Class|owl:unionOf|owl:intersectionOf)* ?rs . \
+      ?x (rdfs:subClassOf|owl:equivalentClass|owl:unionOf/rdf:rest*/rdf:first|owl:intersectionOf/rdf:rest*/rdf:first)* ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?p . \
       ?rs owl:someValuesFrom ?y . \
@@ -612,7 +612,7 @@ inverse.roles.batch=SELECT distinct ?conceptCode ?relationship ?relationshipCode
       ?y rdfs:label ?y_label . \
       ?p :NHC0 ?relationshipCode . \
       ?p rdfs:label ?relationship . \
-      ?x (rdfs:subClassOf|owl:equivalentClass|owl:Class|owl:unionOf|owl:intersectionOf)* ?rs . \
+      ?x (rdfs:subClassOf|owl:equivalentClass|owl:unionOf/rdf:rest*/rdf:first|owl:intersectionOf/rdf:rest*/rdf:first)* ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?p . \
       ?rs owl:someValuesFrom ?y . \
