Start preparing scripts to work with GO

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -13,7 +13,7 @@ PREFIX xml:<http://www.w3.org/2001/XMLSchema#>
 all.graph.names=select distinct ?graphName where { graph ?graphName {?s ?p ?o} }
 
 # constructAllGraphsAndVersionsQuery
-all.graphs.and.versions=select ?source ?graphName ?version ?date ?comment where { \
+all.graphs.and.versions=select distinct ?source ?graphName ?version ?date ?comment where { \
 	graph ?graphName { \
 		?source a owl:Ontology . \
 		?source owl:versionInfo ?version . \
