Get report.sh ready and start working through the report

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -7,7 +7,8 @@ PREFIX rdf:<http://www.w3.org/1999/02/22-rdf-syntax-ns#> \
 PREFIX rdfs:<http://www.w3.org/2000/01/rdf-schema#> \
 PREFIX xsd:<http://www.w3.org/2001/XMLSchema#> \
 PREFIX dc:<http://purl.org/dc/elements/1.1/> \
-PREFIX xml:<http://www.w3.org/2001/XMLSchema#> 
+PREFIX xml:<http://www.w3.org/2001/XMLSchema#> \
+PREFIX oboInOwl:<http://www.geneontology.org/formats/oboInOwl#>
 
 # constructAllGraphNamesQuery()
 all.graph.names=select distinct ?graphName where { graph ?graphName {?s ?p ?o} }
