Report now gets through showing the terminology

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -18,8 +18,8 @@ all.graphs.and.versions=select distinct ?source ?graphName ?version ?date ?comme
 	graph ?graphName { \
 		?source a owl:Ontology . \
 		?source owl:versionInfo ?version . \
-	    ?source dc:date ?date . \
-	    ?source rdfs:comment ?comment . \
+		?source (dc:date|owl:versionInfo) ?date . \
+		?source (rdfs:comment|dc:description) ?comment . \
 	} \
 }
 
