More progress on reporting and updating sparql queries

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -664,8 +664,8 @@ all.properties=SELECT ?property ?propertyCode  ?propertyLabel ?propertyValue \
 { GRAPH <#{namedGraph}> \
   { ?property a owl:AnnotationProperty . \
     ?property rdfs:label ?propertyLabel . \
-    ?property :NHC0 ?propertyCode . \
-    ?property :P108 ?propertyValue . \
+    ?property #{codeCode} ?propertyCode . \
+    ?property #{preferredNameCode} ?propertyValue . \
     filter not exists { ?property rdfs:range xml:anyURI } \
   } \
 } \
@@ -689,7 +689,7 @@ all.qualifiers=SELECT DISTINCT ?propertyCode \
     ?p a owl:AnnotationProperty . \
     ?qualifier a owl:AnnotationProperty . \
     ?z_axiom ?qualifier ?z . \
-    ?qualifier :NHC0 ?propertyCode \
+    ?qualifier #{codeCode} ?propertyCode \
   } \
 } \
 ORDER BY ?propertyCode
@@ -736,8 +736,8 @@ axiom.qualifier.values=SELECT DISTINCT ?propertyValue \
     ?a a owl:Axiom . \
     ?c a owl:Class . \
     ?a owl:annotatedSource ?c . \
-    ?a :#{conceptCode} ?propertyValue . \
-    filter not exists { ?c :#{conceptStatusCode} "#{retiredStatusValue}" } \
+    ?a #{conceptCode} ?propertyValue . \
+    filter not exists { ?c #{conceptStatusCode} "#{retiredStatusValue}" } \
   } \
 } \
 ORDER BY ?propertyValue
