More progress towards reporting on indexing of GO, should be able to load soon

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -2,13 +2,16 @@
 prefix.graph=PREFIX :<#{source}#> \
 PREFIX base:<#{source}>
 
+prefix.go=PREFIX oboInOwl:<http://www.geneontology.org/formats/oboInOwl#> \
+PREFIX obo1:<http://purl.obolibrary.org/obo>\
+PREFIX GO:<http://purl.obolibrary.org/obo/go.owl>
+
 prefix.common=PREFIX owl:<http://www.w3.org/2002/07/owl#> \
 PREFIX rdf:<http://www.w3.org/1999/02/22-rdf-syntax-ns#> \
 PREFIX rdfs:<http://www.w3.org/2000/01/rdf-schema#> \
 PREFIX xsd:<http://www.w3.org/2001/XMLSchema#> \
 PREFIX dc:<http://purl.org/dc/elements/1.1/> \
-PREFIX xml:<http://www.w3.org/2001/XMLSchema#> \
-PREFIX oboInOwl:<http://www.geneontology.org/formats/oboInOwl#>
+PREFIX xml:<http://www.w3.org/2001/XMLSchema#>
 
 # constructAllGraphNamesQuery()
 all.graph.names=select distinct ?graphName where { graph ?graphName {?s ?p ?o} }
@@ -58,20 +61,11 @@ property.no.restrictions=SELECT ?property ?propertyCode  ?propertyLabel ?propert
 { GRAPH <#{namedGraph}> \
   { ?concept #{codeCode} "#{conceptCode}" . \
     ?concept ?property ?propertyValue . \
-    OPTIONAL { ?property rdfs:label ?propertyLabel }. \
+    OPTIONAL { ?property rdfs:label ?propertyLabel } . \
     OPTIONAL { ?property #{codeCode} ?propertyCode } \
   } \
 }
 
-# constructAllPropertyQuery(String conceptCode, String namedGraph)
-all.property=SELECT ?property ?propertyCode  ?propertyLabel ?propertyValue \
-{ GRAPH <#{namedGraph}> \
-  { ?concept #{codeCode} "#{conceptCode}" . \
-    ?concept ?property ?propertyValue . \
-    OPTIONAL { ?property rdfs:label ?propertyLabel }. \
-    OPTIONAL { ?property #{codeCode} ?propertyCode } \
-  } \
-}
 
 # constructConceptLabelQuery(String conceptCode, String namedGraph)
 concept.label=SELECT ?conceptLabel \
@@ -664,8 +658,8 @@ all.properties=SELECT ?property ?propertyCode  ?propertyLabel ?propertyValue \
 { GRAPH <#{namedGraph}> \
   { ?property a owl:AnnotationProperty . \
     ?property rdfs:label ?propertyLabel . \
-    ?property #{codeCode} ?propertyCode . \
-    ?property #{preferredNameCode} ?propertyValue . \
+    OPTIONAL { ?property #{codeCode} ?propertyCode } . \
+    OPTIONAL { ?property #{preferredNameCode} ?propertyValue } . \
     filter not exists { ?property rdfs:range xml:anyURI } \
   } \
 } \
@@ -695,11 +689,11 @@ all.qualifiers=SELECT DISTINCT ?propertyCode \
 ORDER BY ?propertyCode
 
 # constructAllPropertiesNeverUsedQuery(String namedGraph)
-all.propertiesNeverUsed=SELECT DISTINCT ?propertyCode \
+all.propertiesNeverUsed=SELECT DISTINCT ?property ?propertyCode \
 { GRAPH <#{namedGraph}> \
   { \
     ?property a owl:AnnotationProperty . \
-    ?property #{codeCode} ?propertyCode . \
+    OPTIONAL { ?property #{codeCode} ?propertyCode } . \
     filter not exists { ?x ?property ?z } \
   } \
 } \
