Working through to property  metadata

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -51,7 +51,7 @@ property=SELECT ?property ?propertyCode  ?propertyLabel ?propertyValue \
     ?concept #{codeCode} "#{conceptCode}" . \
     ?concept ?property ?propertyValue . \
     ?property a owl:AnnotationProperty . \
-    ?property rdfs:label ?propertyLabel . \
+    OPTIONAL { ?property rdfs:label ?propertyLabel } . \
     OPTIONAL { ?property #{codeCode} ?propertyCode } \
   } \
 }
@@ -66,12 +66,21 @@ property.no.restrictions=SELECT ?property ?propertyCode  ?propertyLabel ?propert
   } \
 }
 
+property.no.restrictions=SELECT ?property ?propertyCode  ?propertyLabel ?propertyValue \
+{ GRAPH <#{namedGraph}> \
+  { ?concept (rdfs:about|#{codeCode}) "#{conceptCode}" . \
+    ?concept ?property ?propertyValue . \
+    OPTIONAL { ?property rdfs:label ?propertyLabel } . \
+    OPTIONAL { ?property #{codeCode} ?propertyCode } \
+  } \
+}
+
 
 # constructConceptLabelQuery(String conceptCode, String namedGraph)
 concept.label=SELECT ?conceptLabel \
 { GRAPH <#{namedGraph}> \
   { \
-    ?concept #{codeCode} "#{conceptCode}" . \
+    ?concept (rdfs:about|#{codeCode}) "#{conceptCode}" . \
     ?concept rdfs:label ?conceptLabel  \
   } \
 }
