--- a/build.gradle
+++ b/build.gradle
@@ -25,15 +25,6 @@ repositories {
 }
 
 
-/*
- * Extra Properties
- */
-ext {
-     /*
-     * Other third-party software versions
-     */
-     swaggerversion = "2.9.2"
-}
 ext['log4j2.version'] = '2.17.1'
 
 apply plugin: 'java'
@@ -67,11 +58,11 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-devtools'
     compile 'org.springframework.boot:spring-boot-starter-actuator'  
     compile 'org.springframework.boot:spring-boot-starter-cache'
+    compile "io.springfox:springfox-boot-starter:3.0.0"
 	compile 'org.springframework:spring-core:5.2.21.RELEASE'
+    compile 'com.google.guava:guava:20.0'
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'commons-io:commons-io:2.6'
-    compile "io.springfox:springfox-swagger2:$swaggerversion" 
-    compile "io.springfox:springfox-swagger-ui:$swaggerversion"
     compile 'org.springframework.boot:spring-boot-properties-migrator'
     compile 'org.springframework:spring-aop'
     compile 'org.aspectj:aspectjweaver:1.9.2'
