Change all graphs query to avoid reusing owl:versionInfo

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -21,7 +21,7 @@ all.graphs.and.versions=select distinct ?source ?graphName ?version ?date ?comme
 	graph ?graphName { \
 		?source a owl:Ontology . \
 		?source owl:versionInfo ?version . \
-		?source dc:date ?date . \
+		OPTIONAL { ?source dc:date ?date } . \
 		?source (rdfs:comment|dc:description) ?comment . \
 	} \
 }
