Cache concepts when reading hierarchies to improve perf

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -17,6 +17,11 @@ spring:
         serialization:
             INDENT_OUTPUT: true
 
+    # ehcache configuration
+    cache:
+        jcache:
+            config: classpath:ehcache.xml
+
 management:
   endpoints:
     web:
