Working on NCI comparison

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -90,7 +90,7 @@ ORDER BY ?conceptCode ?propertyCode
 
 
 # constructConceptLabelQuery(String conceptCode, String namedGraph)
-concept.label=SELECT ?conceptLabel \
+concept.label=SELECT distinct ?conceptLabel \
 { GRAPH <#{namedGraph}> \
   { \
     ?concept (rdfs:about|#{codeCode}) "#{conceptCode}" . \
@@ -103,7 +103,7 @@ axiom=SELECT ?axiom ?axiomProperty  ?axiomValue \
 { GRAPH <#{namedGraph}> \
     { \
       ?axiom a owl:Axiom . \
-      ?axiom owl:annotatedSource #{conceptCode} . \
+      ?axiom owl:annotatedSource #{refCode} . \
       ?axiom ?axiomProperty ?axiomValue \
     } \
 } \
@@ -1284,7 +1284,7 @@ axiom.qualifier.values=SELECT DISTINCT ?propertyValue \
     ?a a owl:Axiom . \
     ?c a owl:Class . \
     ?a owl:annotatedSource ?c . \
-    ?a #{conceptCode} ?propertyValue . \
+    ?a #{propertyCode} ?propertyValue . \
     FILTER NOT EXISTS { ?c #{conceptStatusCode} "#{retiredStatusValue}" } \
   } \
 } \
