Small changes to support NCI qualifiers

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -1247,7 +1247,7 @@ all.propertiesNeverUsed=SELECT DISTINCT ?property ?propertyCode \
 { GRAPH <#{namedGraph}> \
   { \
     ?property a owl:AnnotationProperty . \
-    OPTIONAL { ?property #{codeCode} ?propertyCode } . \
+    ?property #{codeCode} ?propertyCode . \
     FILTER NOT EXISTS { ?x ?property ?z } \
   } \
 } \
