--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -2,6 +2,8 @@
 prefix.graph=PREFIX :<#{source}#> \
 PREFIX base:<#{source}>
 
+prefix.hgnc=PREFIX HGNC:<http://ncicb.nci.nih.gov/genenames.org/HGNC.owl#>
+     
 prefix.go=PREFIX oboInOwl:<http://www.geneontology.org/formats/oboInOwl#> \
 PREFIX obo1:<http://purl.obolibrary.org/obo> \
 PREFIX GO:<http://purl.obolibrary.org/obo/go.owl>
@@ -24,15 +26,6 @@ all.graphs.and.versions=select distinct ?source ?graphName ?version ?date ?comme
 		OPTIONAL { ?source dc:date ?date } . \
 		?source (rdfs:comment|dc:description) ?comment . \
 	} \
-}
-
-# constructVersionInfoQuery(String namedGraph)
-version.info=SELECT ?version ?date ?comment { GRAPH <#{namedGraph}> { \
-    ?o a owl:Ontology . \
-    ?o owl:versionInfo ?version . \
-    ?o dc:date ?date . \
-    ?o rdfs:comment ?comment \
-  } \
 }
 
 # constructAxiomQualifierQuery(String propertyCode, String namedGraph)
