Progress towards report.pl for HGNC

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -24,7 +24,7 @@ all.graphs.and.versions=select distinct ?source ?graphName ?version ?date ?comme
 		?source a owl:Ontology . \
 		?source owl:versionInfo ?version . \
 		OPTIONAL { ?source dc:date ?date } . \
-		?source (rdfs:comment|dc:description) ?comment . \
+		OPTIONAL { ?source (rdfs:comment|dc:description) ?comment } . \
 	} \
 }
 
