EVSRESTAPI-256: enhancements to support loading HGNC (#141)
* Progress towards report.pl for HGNC

* Fix reindexing of NCIm/MDR to load welcome text properly

* Small fixes to HGNC file names

* Add comment

* More work getting HGNC properties right

* Avoid hierarchy stuff for terminologies without hierarchies on load

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -2,8 +2,9 @@
 prefix.graph=PREFIX :<#{source}#> \
 PREFIX base:<#{source}>
 
-prefix.hgnc=PREFIX HGNC:<http://ncicb.nci.nih.gov/genenames.org/HGNC.owl#>
-     
+prefix.hgnc=PREFIX :<http://ncicb.nci.nih.gov/genenames.org/HGNC.owl#> \
+PREFIX HGNC:<http://ncicb.nci.nih.gov/genenames.org/HGNC.owl#>
+
 prefix.go=PREFIX oboInOwl:<http://www.geneontology.org/formats/oboInOwl#> \
 PREFIX obo1:<http://purl.obolibrary.org/obo> \
 PREFIX GO:<http://purl.obolibrary.org/obo/go.owl>
@@ -24,7 +25,7 @@ all.graphs.and.versions=select distinct ?source ?graphName ?version ?date ?comme
 		?source a owl:Ontology . \
 		?source owl:versionInfo ?version . \
 		OPTIONAL { ?source dc:date ?date } . \
-		?source (rdfs:comment|dc:description) ?comment . \
+		OPTIONAL { ?source (rdfs:comment|dc:description) ?comment } . \
 	} \
 }
 
@@ -59,15 +60,6 @@ property.no.restrictions=SELECT ?property ?propertyCode  ?propertyLabel ?propert
   } \
 }
 
-property.no.restrictions=SELECT ?property ?propertyCode  ?propertyLabel ?propertyValue \
-{ GRAPH <#{namedGraph}> \
-  { ?concept (rdfs:about|#{codeCode}) "#{conceptCode}" . \
-    ?concept ?property ?propertyValue . \
-    OPTIONAL { ?property rdfs:label ?propertyLabel } . \
-    OPTIONAL { ?property #{codeCode} ?propertyCode } \
-  } \
-}
-
 properties.batch=SELECT ?conceptCode ?property ?propertyCode ?propertyLabel ?propertyValue \
 { GRAPH <#{namedGraph}> { \
         ?concept a owl:Class . \
@@ -87,7 +79,7 @@ concept.label=SELECT distinct ?conceptLabel \
 { GRAPH <#{namedGraph}> \
   { \
     ?concept (rdfs:about|#{codeCode}) "#{conceptCode}" . \
-    ?concept rdfs:label ?conceptLabel  \
+    ?concept rdfs:label ?conceptLabel \
   } \
 }
 
@@ -1201,10 +1193,10 @@ hierarchy=SELECT ?parentCode ?parentLabel ?childCode ?childLabel \
     }
 
 # constructAllPropertiesQuery(String namedGraph)
-all.properties=SELECT ?property ?propertyCode  ?propertyLabel ?propertyValue \
+#    ?property rdfs:label ?propertyLabel . \
+all.properties=SELECT ?property ?propertyCode ?propertyValue \
 { GRAPH <#{namedGraph}> \
   { ?property a owl:AnnotationProperty . \
-    ?property rdfs:label ?propertyLabel . \
     OPTIONAL { ?property #{codeCode} ?propertyCode } . \
     OPTIONAL { ?property #{preferredNameCode} ?propertyValue } . \
     FILTER NOT EXISTS { ?property rdfs:range xml:anyURI } \
