Get to ability to run report.sh

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -2,11 +2,19 @@
 prefix.graph=PREFIX :<#{source}#> \
 PREFIX base:<#{source}>
 
+prefix.chebi=PREFIX :<http://purl.obolibrary.org/obo/chebi.owl#> \
+PREFIX base:<http://purl.obolibrary.org/obo/chebi.owl#> \
+PREFIX chebi1:<http://purl.obolibrary.org/obo/chebi#2> \
+PREFIX chebi2:<http://purl.obolibrary.org/obo/chebi#> \
+PREFIX chebi:<http://purl.obolibrary.org/obo/chebi/> \
+PREFIX chebi3:<http://purl.obolibrary.org/obo/chebi#3> \
+PREFIX chebi4:<http://purl.obolibrary.org/obo/chebi#1> \
+PREFIX obo:<http://purl.obolibrary.org/obo>
+
 prefix.hgnc=PREFIX :<http://ncicb.nci.nih.gov/genenames.org/HGNC.owl#> \
 PREFIX HGNC:<http://ncicb.nci.nih.gov/genenames.org/HGNC.owl#>
 
-prefix.go=PREFIX oboInOwl:<http://www.geneontology.org/formats/oboInOwl#> \
-PREFIX obo1:<http://purl.obolibrary.org/obo> \
+prefix.go=PREFIX obo1:<http://purl.obolibrary.org/obo> \
 PREFIX GO:<http://purl.obolibrary.org/obo/go.owl>
 
 prefix.common=PREFIX owl:<http://www.w3.org/2002/07/owl#> \
@@ -14,19 +22,28 @@ PREFIX rdf:<http://www.w3.org/1999/02/22-rdf-syntax-ns#> \
 PREFIX rdfs:<http://www.w3.org/2000/01/rdf-schema#> \
 PREFIX xsd:<http://www.w3.org/2001/XMLSchema#> \
 PREFIX dc:<http://purl.org/dc/elements/1.1/> \
+PREFIX oboInOwl:<http://www.geneontology.org/formats/oboInOwl#> \
 PREFIX xml:<http://www.w3.org/2001/XMLSchema#>
 
 # constructAllGraphNamesQuery()
 all.graph.names=select distinct ?graphName where { graph ?graphName {?s ?p ?o} }
 
 # constructAllGraphsAndVersionsQuery
-all.graphs.and.versions=select distinct ?source ?graphName ?version ?date ?comment where { \
-	graph ?graphName { \
-		?source a owl:Ontology . \
-		?source owl:versionInfo ?version . \
-		OPTIONAL { ?source dc:date ?date } . \
-		OPTIONAL { ?source (rdfs:comment|dc:description) ?comment } . \
-	} \
+all.graphs.and.versions=select distinct ?source ?graphName ?version ?date where { \
+  graph ?graphName { \
+    { \
+      ?source a owl:Ontology . \
+      ?source owl:versionInfo ?version \
+      OPTIONAL { ?source (dc:date|oboInOwl:date) ?date } \
+    } \
+    UNION \
+    { \
+      ?source a owl:Ontology . \
+      ?source owl:versionIRI ?version . \
+      OPTIONAL { ?source (dc:date|oboInOwl:date) ?date } \
+      FILTER NOT EXISTS { ?source owl:versionInfo ?versionInfo } \
+    } \
+  } \
 }
 
 # constructAxiomQualifierQuery(String propertyCode, String namedGraph)
