Get to ability to run reindex.sh

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -7,6 +7,7 @@ PREFIX base:<http://purl.obolibrary.org/obo/chebi.owl#> \
 PREFIX chebi1:<http://purl.obolibrary.org/obo/chebi#2> \
 PREFIX chebi2:<http://purl.obolibrary.org/obo/chebi#> \
 PREFIX chebi:<http://purl.obolibrary.org/obo/chebi/> \
+PREFIX CHEBI:<http://purl.obolibrary.org/obo/chebi/> \
 PREFIX chebi3:<http://purl.obolibrary.org/obo/chebi#3> \
 PREFIX chebi4:<http://purl.obolibrary.org/obo/chebi#1> \
 PREFIX obo:<http://purl.obolibrary.org/obo>
