--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -53,7 +53,6 @@ ORDER BY ?propertyValue
 properties=SELECT ?property ?propertyCode ?propertyLabel ?propertyValue \
 { GRAPH <#{namedGraph}> \
   { \
-    ?x a owl:Class . \
     ?x #{codeCode} "#{conceptCode}" . \
     ?x ?property ?propertyValue . \
     ?property a owl:AnnotationProperty . \
@@ -63,12 +62,10 @@ properties=SELECT ?property ?propertyCode ?propertyLabel ?propertyValue \
   } \
 }
 
-property.no.restrictions=SELECT ?property ?propertyCode  ?propertyLabel ?propertyValue \
+properties.metadata=SELECT ?property ?propertyCode  ?propertyLabel ?propertyValue \
 { GRAPH <#{namedGraph}> \
   { \
-    ?x a owl:Class . \
-    ?x #{codeCode} "#{conceptCode}" . \
-    ?x ?property ?propertyValue . \
+    <#{about}> ?property ?propertyValue . \
     OPTIONAL { ?property #{preferredNameCode} ?propertyLabel } . \
     OPTIONAL { ?property #{codeCode} ?propertyCode } . \
     FILTER NOT EXISTS { ?property rdfs:range xml:anyURI } \
@@ -1228,11 +1225,10 @@ all.concepts.with.code=SELECT ?concept ?conceptCode ?conceptLabel \
 } \
 ORDER BY ?conceptCode 
 
-all.concepts.without.code=SELECT ?concept ?conceptCode ?conceptLabel \
+all.concepts.without.code=SELECT ?concept ?conceptLabel \
 { GRAPH <#{namedGraph}> \
     { \
         ?concept a owl:Class . \
-        ?concept rdfs:about ?conceptCode . \
         OPTIONAL { ?concept #{preferredNameCode} ?conceptLabel } . \
         FILTER NOT EXISTS { ?concept #{codeCode} ?x } \
     } \
