Progress on chebi

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -53,48 +53,52 @@ ORDER BY ?propertyValue
 properties=SELECT ?property ?propertyCode ?propertyLabel ?propertyValue \
 { GRAPH <#{namedGraph}> \
   { \
-    ?x #{codeCode} "#{conceptCode}" . \
-    ?x ?property ?propertyValue . \
-    ?property a owl:AnnotationProperty . \
-    OPTIONAL { ?property #{preferredNameCode} ?propertyLabel } . \
-    OPTIONAL { ?property #{codeCode} ?propertyCode } . \
-    FILTER NOT EXISTS { ?property rdfs:range xml:anyURI } \
-  } \
-}
-
-properties.metadata=SELECT ?property ?propertyCode  ?propertyLabel ?propertyValue \
-{ GRAPH <#{namedGraph}> \
-  { \
-    <#{about}> ?property ?propertyValue . \
-    OPTIONAL { ?property #{preferredNameCode} ?propertyLabel } . \
-    OPTIONAL { ?property #{codeCode} ?propertyCode } . \
-    FILTER NOT EXISTS { ?property rdfs:range xml:anyURI } \
+    { \
+      ?x #{codeCode} "#{conceptCode}" . \
+      ?x ?property ?propertyValue . \
+      ?property a owl:AnnotationProperty . \
+      OPTIONAL { ?property #{preferredNameCode} ?propertyLabel } . \
+      OPTIONAL { ?property #{codeCode} ?propertyCode } . \
+      FILTER NOT EXISTS { ?property rdfs:range xml:anyURI } \
+    } \
+    UNION \
+    { \
+      ?x ?property ?propertyValue . \
+      FILTER (?x IN (<#{conceptAbout}>)) . \
+      ?property a owl:AnnotationProperty . \
+      OPTIONAL { ?property #{preferredNameCode} ?propertyLabel } . \
+      OPTIONAL { ?property #{codeCode} ?propertyCode } . \
+      FILTER NOT EXISTS { ?property rdfs:range xml:anyURI } \
+    } \
   } \
 }
 
 properties.batch=SELECT ?conceptCode ?property ?propertyCode ?propertyLabel ?propertyValue \
 { GRAPH <#{namedGraph}> \
   { \
-    ?x a owl:Class . \
-    ?x #{codeCode} ?conceptCode . \
-    FILTER (?conceptCode IN (#{inClause})) . \
-    ?x ?property ?propertyValue . \
-    ?property a owl:AnnotationProperty . \
-    OPTIONAL { ?property #{preferredNameCode} ?propertyLabel } . \
-    OPTIONAL { ?property #{codeCode} ?propertyCode } . \
-    FILTER NOT EXISTS { ?property rdfs:range xml:anyURI } \
+    { \
+      ?x a owl:Class . \
+      ?x #{codeCode} ?conceptCode . \
+      FILTER (?conceptCode IN (#{inClause})) . \
+      ?x ?property ?propertyValue . \
+      ?property a owl:AnnotationProperty . \
+      OPTIONAL { ?property #{preferredNameCode} ?propertyLabel } . \
+      OPTIONAL { ?property #{codeCode} ?propertyCode } . \
+      FILTER NOT EXISTS { ?property rdfs:range xml:anyURI } \
+    } \
+    UNION \
+    { \
+      ?x a owl:Class . \
+      FILTER (?x IN (#{aboutClause})) . \
+      ?x ?property ?propertyValue . \
+      ?property a owl:AnnotationProperty . \
+      OPTIONAL { ?property #{preferredNameCode} ?propertyLabel } . \
+      OPTIONAL { ?property #{codeCode} ?propertyCode } . \
+      FILTER NOT EXISTS { ?property rdfs:range xml:anyURI } \
+    } \
   } \
 } \
 ORDER BY ?conceptCode ?propertyCode
-
-
-concept.label=SELECT distinct ?concept ?conceptLabel \
-{ GRAPH <#{namedGraph}> \
-  { \
-    ?concept #{codeCode} "#{conceptCode}" . \
-    OPTIONAL { ?concept #{preferredNameCode} ?conceptLabel } \
-  } \
-}
 
 axiom=SELECT ?axiom ?axiomProperty  ?axiomValue \
 { GRAPH <#{namedGraph}> \
