Additional work on code/uri stuff and listing remodeled/not used properties

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -69,6 +69,7 @@ properties=SELECT ?property ?propertyCode ?propertyLabel ?propertyValue \
       OPTIONAL { ?property #{preferredNameCode} ?propertyLabel } . \
       OPTIONAL { ?property #{codeCode} ?propertyCode } . \
       FILTER NOT EXISTS { ?property rdfs:range xml:anyURI } \
+      FILTER NOT EXISTS { ?x #{codeCode} ?code } \
     } \
   } \
 }
@@ -95,6 +96,7 @@ properties.batch=SELECT ?conceptCode ?property ?propertyCode ?propertyLabel ?pro
       OPTIONAL { ?property #{preferredNameCode} ?propertyLabel } . \
       OPTIONAL { ?property #{codeCode} ?propertyCode } . \
       FILTER NOT EXISTS { ?property rdfs:range xml:anyURI } \
+      FILTER NOT EXISTS { ?x #{codeCode} ?code } \
     } \
   } \
 } \
@@ -1148,10 +1150,11 @@ hierarchy=SELECT ?parent ?parentCode ?parentLabel ?child ?childCode ?childLabel 
 }
 
 # Get all properties with literal values not URI values
-all.properties=SELECT ?property ?propertyCode \
+all.properties=SELECT ?property ?propertyCode ?propertyLabel \
 { GRAPH <#{namedGraph}> \
   { ?property a owl:AnnotationProperty . \
     OPTIONAL { ?property #{codeCode} ?propertyCode } . \
+    OPTIONAL { ?property #{preferredNameCode} ?propertyLabel } . \
     FILTER NOT EXISTS { ?property rdfs:range xml:anyURI } \
   } \
 }
@@ -1167,14 +1170,15 @@ distinct.property.values=SELECT DISTINCT ?propertyValue \
   } \
 }
 
-all.qualifiers=SELECT DISTINCT ?property ?propertyCode \
+all.qualifiers=SELECT DISTINCT ?property ?propertyCode ?propertyLabel \
 { GRAPH <#{namedGraph}> \
   { \
     ?x owl:annotatedProperty ?y . \
     ?y a owl:AnnotationProperty . \
     ?property a owl:AnnotationProperty . \
     ?x ?property ?z . \
-    OPTIONAL { ?property #{codeCode} ?propertyCode } \
+    OPTIONAL { ?property #{codeCode} ?propertyCode } . \
+    OPTIONAL { ?property #{preferredNameCode} ?propertyLabel } \
   } \
 } \
 ORDER BY ?propertyCode
@@ -1183,25 +1187,27 @@ all.properties.never.used=SELECT DISTINCT ?property ?propertyCode \
 { GRAPH <#{namedGraph}> \
   { \
     ?property a owl:AnnotationProperty . \
-    ?property #{codeCode} ?propertyCode . \
+    OPTIONAL { ?property #{codeCode} ?propertyCode } . \
     FILTER NOT EXISTS { ?x ?property ?z } \
   } \
 } \
 ORDER BY ?propertyCode
 
 # Annotation properties with URI range (to differentiate from properties)
-all.associations=SELECT ?property ?propertyCode  \
+all.associations=SELECT ?property ?propertyCode ?propertyLabel \
 { GRAPH <#{namedGraph}> \
   { ?property a owl:AnnotationProperty . \
-    ?property #{codeCode} ?propertyCode . \
+    OPTIONAL { ?property #{codeCode} ?propertyCode } . \
+    OPTIONAL { ?property #{preferredNameCode} ?propertyLabel } \
     ?property rdfs:range xml:anyURI  \
   } \
 }
 
-all.roles=SELECT ?property ?propertyCode  \
+all.roles=SELECT ?property ?propertyCode ?propertyLabel \
 { GRAPH <#{namedGraph}> \
   { ?property a owl:ObjectProperty . \
-    ?property #{codeCode} ?propertyCode . \
+    OPTIONAL { ?property #{codeCode} ?propertyCode } . \
+    OPTIONAL { ?property #{preferredNameCode} ?propertyLabel } \
   } \
 }
 
