Handle definition/synonym type codes better and deal with remodeled properties/qualifiers more completely

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -68,7 +68,7 @@ properties=SELECT ?property ?propertyCode ?propertyLabel ?propertyValue \
       ?property a owl:AnnotationProperty . \
       OPTIONAL { ?property #{preferredNameCode} ?propertyLabel } . \
       OPTIONAL { ?property #{codeCode} ?propertyCode } . \
-      FILTER NOT EXISTS { ?property rdfs:range xml:anyURI } \
+      FILTER NOT EXISTS { ?property rdfs:range xml:anyURI } . \
       FILTER NOT EXISTS { ?x #{codeCode} ?code } \
     } \
   } \
@@ -95,7 +95,7 @@ properties.batch=SELECT ?conceptCode ?property ?propertyCode ?propertyLabel ?pro
       ?property a owl:AnnotationProperty . \
       OPTIONAL { ?property #{preferredNameCode} ?propertyLabel } . \
       OPTIONAL { ?property #{codeCode} ?propertyCode } . \
-      FILTER NOT EXISTS { ?property rdfs:range xml:anyURI } \
+      FILTER NOT EXISTS { ?property rdfs:range xml:anyURI } . \
       FILTER NOT EXISTS { ?x #{codeCode} ?code } \
     } \
   } \
