Deal with axioms

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -42,6 +42,7 @@ all.graphs.and.versions=select distinct ?source ?graphName ?version ?date \
   } \
 }
 
+# ORDER BY is important here - used to build a list in order
 axiom.qualifier=SELECT DISTINCT ?propertyValue \
 { GRAPH <#{namedGraph}> \
   { ?x a owl:Axiom . \
@@ -99,19 +100,22 @@ properties.batch=SELECT ?conceptCode ?property ?propertyCode ?propertyLabel ?pro
       FILTER NOT EXISTS { ?x #{codeCode} ?code } \
     } \
   } \
-} \
-ORDER BY ?conceptCode ?propertyCode
+}
 
-axiom=SELECT ?axiom ?axiomProperty  ?axiomValue \
+# ORDER by is important here because we need all the axiom parts together
+axiom=SELECT ?axiom ?axiomProperty ?axiomValue \
 { GRAPH <#{namedGraph}> \
   { \
+    ?x a owl:Class . \
+    ?x #{codeCode} "#{conceptCode}" . \
     ?axiom a owl:Axiom . \
-    ?axiom owl:annotatedSource #{refCode} . \
+    ?axiom owl:annotatedSource ?x . \
     ?axiom ?axiomProperty ?axiomValue \
   } \
 } \
 ORDER BY ?axiom
 
+# ORDER by is important here because we need all the axiom parts together
 axioms.batch=SELECT ?conceptCode ?axiom ?axiomProperty ?axiomValue \
 { GRAPH <#{namedGraph}> \
   { \
@@ -154,8 +158,7 @@ children=SELECT ?child ?childLabel ?childCode \
       FILTER (?x_parent != ?child) \
     } \
   } \
-} \
-ORDER by ?childLabel
+}
 
 parents=SELECT ?parent ?parentLabel ?parentCode \
 { GRAPH <#{namedGraph}> \
@@ -186,8 +189,7 @@ parents=SELECT ?parent ?parentLabel ?parentCode \
       FILTER (?x_child != ?parent) \
     } \
   } \
-} \
-ORDER by ?parentLabel
+}
 
 subset=SELECT ?concept ?conceptLabel ?conceptCode \
 { GRAPH <#{namedGraph}> \
