More work on axioms

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -103,14 +103,24 @@ properties.batch=SELECT ?conceptCode ?property ?propertyCode ?propertyLabel ?pro
 }
 
 # ORDER by is important here because we need all the axiom parts together
-axiom=SELECT ?axiom ?axiomProperty ?axiomValue \
+axioms=SELECT ?axiom ?axiomProperty ?axiomValue \
 { GRAPH <#{namedGraph}> \
+  { \
   { \
     ?x a owl:Class . \
     ?x #{codeCode} "#{conceptCode}" . \
     ?axiom a owl:Axiom . \
     ?axiom owl:annotatedSource ?x . \
     ?axiom ?axiomProperty ?axiomValue \
+  } \
+  UNION \
+  { \
+    ?x a owl:Class . \
+    FILTER (?x IN (<#{conceptAbout}>)) . \
+    ?axiom a owl:Axiom . \
+    ?axiom owl:annotatedSource ?x . \
+    ?axiom ?axiomProperty ?axiomValue \
+  } \
   } \
 } \
 ORDER BY ?axiom
@@ -119,12 +129,23 @@ ORDER BY ?axiom
 axioms.batch=SELECT ?conceptCode ?axiom ?axiomProperty ?axiomValue \
 { GRAPH <#{namedGraph}> \
   { \
+  { \
     ?x a owl:Class . \
     ?x #{codeCode} ?conceptCode . \
     FILTER (?conceptCode IN (#{inClause})) . \
     ?axiom a owl:Axiom . \
     ?axiom owl:annotatedSource ?x . \
     ?axiom ?axiomProperty ?axiomValue \
+  } \
+  UNION \
+  { \
+    ?x a owl:Class . \
+    ?x #{codeCode} ?conceptCode . \
+    FILTER (?x IN (#{aboutClause})) . \
+    ?axiom a owl:Axiom . \
+    ?axiom owl:annotatedSource ?x . \
+    ?axiom ?axiomProperty ?axiomValue \
+  } \
   } \
 } \
 ORDER BY ?axiom
