--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -90,14 +90,14 @@ properties.batch=SELECT ?conceptCode ?property ?propertyCode ?propertyLabel ?pro
     } \
     UNION \
     { \
-      ?x a owl:Class . \
-      FILTER (?x IN (#{aboutClause})) . \
-      ?x ?property ?propertyValue . \
+      ?conceptCode a owl:Class . \
+      FILTER (?conceptCode IN (#{aboutClause})) . \
+      ?conceptCode ?property ?propertyValue . \
       ?property a owl:AnnotationProperty . \
       OPTIONAL { ?property #{preferredNameCode} ?propertyLabel } . \
       OPTIONAL { ?property #{codeCode} ?propertyCode } . \
       FILTER NOT EXISTS { ?property rdfs:range xml:anyURI } . \
-      FILTER NOT EXISTS { ?x #{codeCode} ?code } \
+      FILTER NOT EXISTS { ?conceptCode #{codeCode} ?code } \
     } \
   } \
 }
@@ -106,21 +106,21 @@ properties.batch=SELECT ?conceptCode ?property ?propertyCode ?propertyLabel ?pro
 axioms=SELECT ?axiom ?axiomProperty ?axiomValue \
 { GRAPH <#{namedGraph}> \
   { \
-  { \
-    ?x a owl:Class . \
-    ?x #{codeCode} "#{conceptCode}" . \
-    ?axiom a owl:Axiom . \
-    ?axiom owl:annotatedSource ?x . \
-    ?axiom ?axiomProperty ?axiomValue \
-  } \
-  UNION \
-  { \
-    ?x a owl:Class . \
-    FILTER (?x IN (<#{conceptAbout}>)) . \
-    ?axiom a owl:Axiom . \
-    ?axiom owl:annotatedSource ?x . \
-    ?axiom ?axiomProperty ?axiomValue \
-  } \
+    { \
+      ?x a owl:Class . \
+      ?x #{codeCode} "#{conceptCode}" . \
+      ?axiom a owl:Axiom . \
+      ?axiom owl:annotatedSource ?x . \
+      ?axiom ?axiomProperty ?axiomValue \
+    } \
+    UNION \
+    { \
+      ?x a owl:Class . \
+      FILTER (?x IN (<#{conceptAbout}>)) . \
+      ?axiom a owl:Axiom . \
+      ?axiom owl:annotatedSource ?x . \
+      ?axiom ?axiomProperty ?axiomValue \
+    } \
   } \
 } \
 ORDER BY ?axiom
@@ -129,23 +129,23 @@ ORDER BY ?axiom
 axioms.batch=SELECT ?conceptCode ?axiom ?axiomProperty ?axiomValue \
 { GRAPH <#{namedGraph}> \
   { \
-  { \
-    ?x a owl:Class . \
-    ?x #{codeCode} ?conceptCode . \
-    FILTER (?conceptCode IN (#{inClause})) . \
-    ?axiom a owl:Axiom . \
-    ?axiom owl:annotatedSource ?x . \
-    ?axiom ?axiomProperty ?axiomValue \
-  } \
-  UNION \
-  { \
-    ?x a owl:Class . \
-    ?x #{codeCode} ?conceptCode . \
-    FILTER (?x IN (#{aboutClause})) . \
-    ?axiom a owl:Axiom . \
-    ?axiom owl:annotatedSource ?x . \
-    ?axiom ?axiomProperty ?axiomValue \
-  } \
+    { \
+      ?x a owl:Class . \
+      ?x #{codeCode} ?conceptCode . \
+      FILTER (?conceptCode IN (#{inClause})) . \
+      ?axiom a owl:Axiom . \
+      ?axiom owl:annotatedSource ?x . \
+      ?axiom ?axiomProperty ?axiomValue \
+    } \
+    UNION \
+    { \
+      ?x a owl:Class . \
+      ?x #{codeCode} ?conceptCode . \
+      FILTER (?x IN (#{aboutClause})) . \
+      ?axiom a owl:Axiom . \
+      ?axiom owl:annotatedSource ?x . \
+      ?axiom ?axiomProperty ?axiomValue \
+    } \
   } \
 } \
 ORDER BY ?axiom
